tried to fix the about me box, text is still overflowing

--- a/main.css
+++ b/main.css
@@ -81,8 +81,11 @@ body {
   border: 2px black solid;
   border-radius: 10%;
   padding: 20px;
-  overflow: hidden;
+  /* overflow: scroll; */
+  text-overflow: ellipsis;
   height: 90%;
+  
+  
 }
 
 
